@@ -7,8 +7,8 @@ dnl set the version here
 dnl
 SINGULAR_MAJOR_VERSION=1
 SINGULAR_MINOR_VERSION=1
-SINGULAR_SUB_VERSION=7
-VERSION_DATE="March 1998"
+SINGULAR_SUB_VERSION=8
+VERSION_DATE="April 1998"
 AC_SUBST(SINGULAR_MAJOR_VERSION)
 AC_SUBST(SINGULAR_MINOR_VERSION)
 AC_SUBST(SINGULAR_SUB_VERSION)
