@@ -7,8 +7,8 @@ dnl Version business -- should be the same as in Singular subdir
 dnl
 SINGULAR_MAJOR_VERSION=1
 SINGULAR_MINOR_VERSION=1
-SINGULAR_SUB_VERSION=5
-VERSION_DATE="December 1997"
+SINGULAR_SUB_VERSION=8
+VERSION_DATE="April 1998"
 AC_SUBST(SINGULAR_MAJOR_VERSION)
 AC_SUBST(SINGULAR_MINOR_VERSION)
 AC_SUBST(SINGULAR_SUB_VERSION)
